--- a/VM-vs-Docker-Benchmark/scripts/docker/Dockerfile
+++ b/VM-vs-Docker-Benchmark/scripts/docker/Dockerfile
@@ -1,32 +1,22 @@
-# Usar una imagen base con Python
+# Usamos una imagen base de Python
 FROM python:3.9-slim
 
-# Instalar dependencias necesarias para pygame (SDL y otras)
+# Instalamos las dependencias necesarias
 RUN apt-get update && apt-get install -y \
-    libsdl2-dev \
-    libsdl2-image-dev \
-    libsdl2-mixer-dev \
-    libsdl2-ttf-dev \
-    libsmpeg-dev \
-    libportmidi-dev \
-    libavformat-dev \
-    libswscale-dev \
-    libjpeg-dev \
+    procps \
     && rm -rf /var/lib/apt/lists/*
 
-# Crear directorio de la app
+# Establecemos el directorio de trabajo
 WORKDIR /app
 
-# Copiar requirements y el juego
-COPY ../../app_test/shooter/requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+# Copiamos los archivos del proyecto
+COPY . /app
 
-COPY ../../app_test/shooter/ ./
+# Instalamos las dependencias de Python
+RUN pip install -r requirements.txt
 
-# Copiar script benchmark.sh y darle permisos
-COPY benchmark.sh /app/
-RUN chmod +x /app/benchmark.sh
+# Exponemos el puerto (si es necesario)
+EXPOSE 8080
 
-# Comando por defecto para correr el benchmark
-CMD ["./benchmark.sh"]
-
+# Comando para ejecutar el script principal o el juego
+CMD ["python3", "shooter.py"]
